# neotec_market_intelligence

./: DEVELOPER_GUIDE.md  MANIFEST.in  README.md  package.json  pyproject.toml  requirements.txt  setup.py
neotec_market_intelligence/: hooks.py  modules.txt  patches.txt
neotec_market_intelligence/config/: desktop.py
neotec_market_intelligence/fixtures/: workflow_nmi_investment_proposal.json  workflow_nmi_rebalance_proposal.json  workspace_neotec_market_intelligence.json
neotec_market_intelligence/neotec_market_intelligence/doctype/nmi_ai_insight/: nmi_ai_insight.json  nmi_ai_insight.py
neotec_market_intelligence/neotec_market_intelligence/doctype/nmi_alert_event/: nmi_alert_event.json  nmi_alert_event.py
neotec_market_intelligence/neotec_market_intelligence/doctype/nmi_alert_rule/: nmi_alert_rule.json  nmi_alert_rule.py
neotec_market_intelligence/neotec_market_intelligence/doctype/nmi_fx_exposure/: nmi_fx_exposure.json  nmi_fx_exposure.py
neotec_market_intelligence/neotec_market_intelligence/doctype/nmi_instrument/: nmi_instrument.json  nmi_instrument.py
neotec_market_intelligence/neotec_market_intelligence/doctype/nmi_investment_proposal/: nmi_investment_proposal.json  nmi_investment_proposal.py
neotec_market_intelligence/public/css/: nmi.css
neotec_market_intelligence/public/js/: nmi.js
neotec_market_intelligence/services/: alert_service.py  provider_factory.py  sync_service.py  valuation_service.py
neotec_market_intelligence/services/providers/: base_provider.py  demo_provider.py  provider_base.py
(+32 files in other folders)
